# file-loader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.sqlserver  Makefile  README.md  docker-compose.yml  main.py  profile.json  pyproject.toml  todo.txt
docker/: sqlserver-init.sql
src/: db.py  exceptions.py  file_processor.py  logging_conf.py  notifications.py  process.py  retry.py  settings.py  sqlserver.py  utils.py
src/net-runtime-specific/linux-x64/: MssqlOperator.deps.json
src/readers/: base_reader.py  csv_reader.py  excel_reader.py  json_reader.py  reader_factory.py  utils.py
src/sources/: base.py  registry.py
src/sources/systems/: master.py
src/sources/systems/customer/: customer.py
src/sources/systems/financial/: financial.py
src/sources/systems/inventory/: inventory.py
src/sources/systems/sales/: sales.py
src/tests/: conftest.py  test_csv.py  test_csv_gzip.py  test_excel.py  test_json.py  test_json_gzip.py  test_notifications.py
src/tests/archive_data/: sales_with_dlq_errors.csv
src/tests/duplicate_files_data/: sales_2024.csv  sales_2024_20251031_191231.csv
src/tests/fixtures/: source_configs.py
src/tests/test_data/: inventory_2024.xlsx  ledger_2024.json  sales_duplicate_grain.csv
