[project]
name = "file-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.4.0.post0",
    "pendulum>=3.1.0",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-extra-types[pendulum]>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pyexcel>=0.7.4",
    "pyexcel-xls>=0.7.1",
    "pyexcel-xlsx>=0.6.1",
    "pyodbc>=5.3.0",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.2",
    "slack-sdk>=3.37.0",
    "sqlalchemy>=2.0.44",
    "xxhash>=3.6.0",
    "rich>=14.2.0",
    "email-validator>=2.3.0",
    "scalene>=1.5.55",
    "pythonnet>=3.0.5",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "logfire>=4.14.2",
    "opentelemetry-instrumentation-jinja2>=0.59b0",
    "opentelemetry-instrumentation-psycopg>=0.59b0",
    "opentelemetry-instrumentation-psycopg2>=0.59b0",
    "opentelemetry-instrumentation-pymysql>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
    "opentelemetry-instrumentation-sqlite3>=0.59b0",
    "opentelemetry-instrumentation-urllib>=0.59b0",
    "opentelemetry-semantic-conventions>=0.59b0",
]
